# Acalc2

./: CMakeLists.txt  README.md  build.sh
src/: graph  main.cpp
src/environment/: environment.h
src/interpreter/: interpreter.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: expr.h  parser.cpp  parser.h
src/token/: token.h
